objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountAccount__c</fullName>
        <label>担当者取引先名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountAddressPostalCode__c</fullName>
        <formula>Account.PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>担当者住所(郵便番号)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCode__c</fullName>
        <formula>Account.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountDepartment__c</fullName>
        <label>担当者部署</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccountEmail__c</fullName>
        <label>担当者メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AccountFAX__c</fullName>
        <label>担当者FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccountMailingAddress__c</fullName>
        <formula>Account.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>担当者住所(郵送先)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountMobilePhone__c</fullName>
        <label>担当者携帯</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>担当者名</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPersonalAddressPostalCode__c</fullName>
        <label>個人住所(郵便番号)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPhone__c</fullName>
        <label>担当者電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccountTitle__c</fullName>
        <label>担当者役職</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_AddInfo__c</fullName>
        <label>住所(追加情報)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_edit_PostalCode__c</fullName>
        <label>住所（郵送先-追加2）郵便番号</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_edit__c</fullName>
        <label>住所（郵送先-追加2）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_edit_del__c</fullName>
        <formula>MailingPersonalAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>住所（郵送先-追加2）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>所属</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedName__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>作成者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DM特記事項</description>
        <inlineHelpText>DM特記事項にチェックが有る場合、DM発送は基本行われません。
特記事項に発送可能の記載が有る場合のみ、その記述に従います。</inlineHelpText>
        <label>DM特記事項</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM302__c</fullName>
        <inlineHelpText>DM特記内容</inlineHelpText>
        <label>DM特記内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMDisplayText__c</fullName>
        <formula>CASE ( DM__c,
NULL, &apos;担当者が入力してあればDMラベル印刷対象&apos;,
&apos;1&apos;, &apos;DM送付客先&apos;,
&apos;2&apos;, &apos;DM不要客先&apos;,
&apos;9&apos;, &apos;DM禁止客先&apos;,
&apos;T&apos;, &apos;宅急便でのDM送T付が指定されている客先&apos;,
&apos;Y&apos;, &apos;DM発送(委託)業者を使用した場合に受取拒否される客先&apos;,
DM__c
)</formula>
        <label>DM送付除外区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMList__c</fullName>
        <label>DM送付区分</label>
        <picklist>
            <picklistValues>
                <fullName>要</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不要</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMSendAddressPostalCode__c</fullName>
        <formula>IF( AccountPersonalAddressPostalCode__c = NULL, AccountAddressPostalCode__c, AccountPersonalAddressPostalCode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM送付先住所(郵便番号)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSendAddress__c</fullName>
        <formula>IF( MailingPersonalAddress__c = NULL, IF( Address_AddInfo__c = NULL, AccountMailingAddress__c, AccountMailingAddress__c &amp; &quot; &quot; &amp;  Address_AddInfo__c ),  MailingPersonalAddress__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM送付先住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_KBN__c</fullName>
        <label>DM可否</label>
        <picklist>
            <picklistValues>
                <fullName>可</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>拒否</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <label>DM送付除外</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_mail__c</fullName>
        <label>EMメルマガ</label>
        <picklist>
            <picklistValues>
                <fullName>希望する</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>希望しない</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対象外</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>内線</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>専門分野、出身大学等の情報は、ここにご記入ください。</description>
        <label>その他、取引先責任者に関する情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field301__c</fullName>
        <description>在籍確認BOX</description>
        <inlineHelpText>在籍確認出来たら選択して下さい。</inlineHelpText>
        <label>在籍確認</label>
        <picklist>
            <picklistValues>
                <fullName>在籍</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>離籍</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field303__c</fullName>
        <label>系列(JRI)</label>
        <picklist>
            <picklistValues>
                <fullName>未選択</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM・MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gakubu__c</fullName>
        <formula>Account.UndergraduateFormula__c</formula>
        <label>学部事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gakureki__c</fullName>
        <label>学歴・出身校</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadquartersSection__c</fullName>
        <label>所属（本部）</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kokyakucode__c</fullName>
        <label>顧客コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終更新者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastQuotationNumber__c</fullName>
        <label>最終見積書番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MailingPersonalAddress__c</fullName>
        <label>個人住所(郵送先)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NineDigitAccountDisplay__c</fullName>
        <formula>IF (( LEN(AccountCode__c) = 9), &apos;★★★&apos;, IF (( LEN(AccountCode__c) = 10), &apos;☆★☆&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9桁取引先表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>備考</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Answer__c</fullName>
        <label>対応内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Qustion__c</fullName>
        <label>問合せ内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>系列（営業）</label>
        <picklist>
            <picklistValues>
                <fullName>1P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SM_mail__c</fullName>
        <label>SMメルマガ</label>
        <picklist>
            <picklistValues>
                <fullName>希望する</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>希望しない</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_KBN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>営業担当区分</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saishin__c</fullName>
        <formula>SmartViscaf__NameCard__r.SmartViscaf__Saishin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>この名刺が最新</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardFreehandmemo__c</fullName>
        <label>名刺手書きメモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardListName__c</fullName>
        <inlineHelpText>List Name</inlineHelpText>
        <label>名刺リスト名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardMemo__c</fullName>
        <label>名刺メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>名刺</label>
        <referenceTo>SmartViscaf__NameCard__c</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>ContactNameCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TantoshaCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>担当者コード</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>attribute__c</fullName>
        <label>属性</label>
        <picklist>
            <picklistValues>
                <fullName>基礎研究（医学・生物）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>基礎研究（理工）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>基礎研究（化学）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>基礎研究（ｴﾈﾙｷﾞｰ）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応用研究（医学・生物）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応用研究（理工）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応用研究（化学）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応用研究（ｴﾈﾙｷﾞｰ）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>品質管理（医学・生物）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>品質管理（理工）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>品質管理（化学）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>品質管理（ｴﾈﾙｷﾞｰ）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>教育</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>動物実験</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>液体検査</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>食品分析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>薬品分析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>臨床検査</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医学・生物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>理工</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>化学</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>エネルギー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アスベスト</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>カーボンナノチューブ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>太陽電池</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>リチウム電池</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>燃料電池</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原子力</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自動車</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>半導体（特定１２社）</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>biko1__c</fullName>
        <label>備考１</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biko2__c</fullName>
        <label>備考２</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biko3__c</fullName>
        <label>備考３</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_representative1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2015/09追加 (ERPから連携していない)</inlineHelpText>
        <label>営業担当1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sales_representative1R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sales_representative2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2015/09追加 (ERPから連携していない)</inlineHelpText>
        <label>営業担当2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sales_representative2r</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sales_representative3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2015/09追加 (ERPから連携していない)</inlineHelpText>
        <label>営業担当3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sales_representative3r</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>A_yam_All_Select</fullName>
        <columns>TantoshaCode__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Kokyakucode__c</columns>
        <columns>SmartViscaf__NameCard__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Gakubu__c</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>Affiliation__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>biko1__c</columns>
        <columns>biko2__c</columns>
        <columns>DMDisplayText__c</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>_[A.yam] Select All</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>TantoshaCode__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Kokyakucode__c</columns>
        <columns>SmartViscaf__NameCard__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Gakubu__c</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>Affiliation__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>biko1__c</columns>
        <columns>biko2__c</columns>
        <columns>DMDisplayText__c</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先責任者</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>AllContacts_test1</fullName>
        <columns>TantoshaCode__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Kokyakucode__c</columns>
        <columns>SmartViscaf__NameCard__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Gakubu__c</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>Affiliation__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>biko1__c</columns>
        <columns>biko2__c</columns>
        <columns>DMDisplayText__c</columns>
        <columns>PARENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SR_KBN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TantoshaCode__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>すべての取引先責任者_test1</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>鎌井</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>NineDigitAccountDisplay__c</columns>
        <columns>AccountCode__c</columns>
        <columns>TantoshaCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>今週の新規</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Rectype_Check</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>NineDigitAccountDisplay__c</columns>
        <columns>AccountCode__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contact_X9</value>
        </filters>
        <filters>
            <field>NineDigitAccountDisplay__c</field>
            <operation>equals</operation>
        </filters>
        <label>_[A.yam] 7桁_9桁用</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View6</fullName>
        <columns>NineDigitAccountDisplay__c</columns>
        <columns>AccountCode__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountDepartment__c</columns>
        <columns>Field1__c</columns>
        <columns>Field305__c</columns>
        <columns>AccountMailingAddress__c</columns>
        <columns>Field311__c</columns>
        <columns>Gakubu__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/7/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>5/11/2018 12:00 AM</value>
        </filters>
        <label>＠取引先責任者 『その他､取責者に関する情報』入力確認 ［井出］</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View8</fullName>
        <columns>SR_KBN__c</columns>
        <columns>SmartViscaf__NameCard__c</columns>
        <columns>AccountCode__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>SmartViscaf__NameCardFreehandmemo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SmartViscaf__NameCard__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SR_KBN__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.JEOL_CONTACT</value>
        </filters>
        <label>＠　すべての取引先責任者　営業区分チェック　井出さん</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_X9</fullName>
        <active>true</active>
        <label>9桁用</label>
    </recordTypes>
    <recordTypes>
        <fullName>JEOL_ASIA_CONTACT</fullName>
        <active>true</active>
        <label>JEOL Asia</label>
    </recordTypes>
    <recordTypes>
        <fullName>JEOL_CONTACT</fullName>
        <active>true</active>
        <label>JEOL用</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vip_2</fullName>
        <active>true</active>
        <label>Vip管理</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>